# oz_django_6

./: .python-version  pyproject.toml  temp.py  test.sh  text.text
.github/workflows/: ci.yml
oz_django6/: settings.py
tabom/: models.py  tests.py
tabom/migrations/: 0002_like_uix_user_article_id.py  0003_article_like_count.py
tabom/routers/: like_router.py
tabom/services/: like_service.py  test_article_service.py
tabom/tests/: test_like_service.py  tests_autonow.py
